@@ -25,6 +25,8 @@ Version 1.0 to be released
   Added a position parameter to CClientScript::registerScript and CClientScript::registerScriptFile (Qiang)
 - Fixed a bug in CNumberValidator about checking upper limit (Qiang)
 - Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
+- Fixed a bug when MySQL tables are using mixed-case letters in their names, relational
+  active record fails to work as expected. (Qiang)
 
 Version 1.0rc November 10, 2008
 -------------------------------
